--- a/setup.env
+++ b/setup.env
@@ -1,23 +1,20 @@
 #!/bin/sh
+# --------------------------------------------------------------------
+# Default setup config settings, if no payload overrides selected
+# --------------------------------------------------------------------
 
-###########################
-# General config
-#   	these are the default settings
-#	the setting are only used, if not defined in the payload itself
-###########################
-
+# ---------------------------
 # USB setup
 # ---------------------------
 # Make sure to change USB_PID if you enable different USB functionality in order
 # to force Windows to enumerate the device again
 USB_VID="0x1d6b"        # Vendor ID
 USB_PID="0x0137"        # Product ID
-
-USE_ECM=false            # if true CDC ECM will be enabled
-USE_RNDIS=false          # if true RNDIS will be enabled
-USE_HID=false            # if true HID (keyboard) will be enabled
-USE_HID_MOUSE=false            # if true HID mouse will be enabled
-USE_RAWHID=false         # if true a raw HID device will be enabled
+USE_ECM=false           # if true CDC ECM will be enabled
+USE_RNDIS=false         # if true RNDIS will be enabled
+USE_HID=false           # if true HID (keyboard) will be enabled
+USE_HID_MOUSE=false     # if true HID mouse will be enabled
+USE_RAWHID=false        # if true a raw HID device will be enabled
 USE_UMS=false           # if true USB Mass Storage will be enabled
 
 # ===========================================
