Add better setup structure

--- a/setup/setup.ini
+++ b/setup/setup.ini
@@ -1,14 +1,12 @@
-# Core packages
-ssh=*
+# Install core packages
 git=*
 
 # Development packages
 python3=*
-golang=*
+go=1.21
 #node=*
 #rust=*
-#rustscan=*
 #sqllite=*
 
 # Additional tooling to include
-#opsec=*
+#rustscan=*
