Disable os updates in setup

--- a/setup/services.ini
+++ b/setup/services.ini
@@ -2,7 +2,7 @@
 # Setup and activate additional services in systemd
 # ----------------------------------------------------------------
 ssh=true                # Enable SSH service on the device
-#opsec=true              # See also: ./services/opsec/service.cfg
+opsec=true              # See also: ./services/opsec/service.cfg
 
 # ----------------------------------------------------------------
 # Disable un-used services that just slow down startup phase
