Rename install script and add image update script

--- a/setup/services.ini
+++ b/setup/services.ini
@@ -7,7 +7,7 @@ opsec=true              # See also: ./services/opsec/service.cfg
 # ----------------------------------------------------------------
 # Disable un-used services that just slow down startup phase
 # ----------------------------------------------------------------
-ntp=false               # not needed for stretch (only jessie)
-dhcpcd=false
-networking=false
-avahi-daemon=false
+#ntp=false               # not needed for stretch (only jessie)
+#dhcpcd=false
+#networking=false
+#avahi-daemon=false
