Tweaks to setup and deployment scripts

--- a/setup/services.ini
+++ b/setup/services.ini
@@ -3,7 +3,7 @@
 # ----------------------------------------------------------------
 ssh=true                # Enable SSH service on the device
 baseline=true           # Simple proof of concept
-#opsec=true              # See also: ./services/opsec/service.cfg
+opsec=true              # See also: ./services/opsec/service.cfg
 
 # ----------------------------------------------------------------
 # Disable un-used services that just slow down startup phase
