Tweak hotspot service

--- a/setup/services.ini
+++ b/setup/services.ini
@@ -1,8 +1,8 @@
 # ----------------------------------------------------------------
 # Setup and activate additional services in systemd
 # ----------------------------------------------------------------
-ssh=true                # Enable SSH service on the device
-baseline=true           # Simple proof of concept
+#ssh=true                # Enable SSH service on the device
+#baseline=true           # Simple proof of concept
 hotspot=true            # See also: ./services/opsec/service.cfg
 #opsec=true              # See also: ./services/opsec/service.cfg
 
