--- a/setup/packages.ini
+++ b/setup/packages.ini
@@ -1,12 +1,11 @@
 # Install core packages
 git=*
 
-# Development packages
+# Development tools
 python3=*
-go=*
 node=*
-#rust=*
-#sqllite=*
+go=*
+rust=*
 
-# Additional tooling to include
-#rustscan=*
+# Additional packages
+nginx=*
