--- a/setup/services.ini
+++ b/setup/services.ini
@@ -1,10 +1,10 @@
 # ----------------------------------------------------------------
 # Setup and activate additional services in systemd
 # ----------------------------------------------------------------
-#ssh=true                # Enable SSH service on the device
+ssh=true                # Enable SSH service on the device
 #baseline=true           # Simple proof of concept
-hotspot=true            # See also: ./services/opsec/service.cfg
-#opsec=true              # See also: ./services/opsec/service.cfg
+#hotspot=true             # See also: ./services/hotspot/service.cfg
+opsec=true               # See also: ./services/opsec/service.cfg
 
 # ----------------------------------------------------------------
 # Disable un-used services that just slow down startup phase
