--- a/setup/services.ini
+++ b/setup/services.ini
@@ -2,9 +2,9 @@
 # Setup and activate additional services in systemd
 # ----------------------------------------------------------------
 ssh=true                # Enable SSH service on the device
-#baseline=true           # Simple proof of concept
-#hotspot=true             # See also: ./services/hotspot/service.cfg
-opsec=true               # See also: ./services/opsec/service.cfg
+hotspot=true            # See also: ./services/hotspot/service.cfg
+webserver=true
+#opsec=true
 
 # ----------------------------------------------------------------
 # Disable un-used services that just slow down startup phase
