--- a/setup/services.ini
+++ b/setup/services.ini
@@ -2,8 +2,8 @@
 # Setup and activate additional services in systemd
 # ----------------------------------------------------------------
 ssh=true                # Enable SSH service on the device
-hotspot=true            # See also: ./services/hotspot/service.cfg
-webserver=true
+webserver=true          # Start a simple static web server
+hotspot=true            # Create a wifi hotsport ans start
 #opsec=true
 
 # ----------------------------------------------------------------
