--- a/setup/services/hotspot/etc/dnsmasq.conf
+++ b/setup/services/hotspot/etc/dnsmasq.conf
@@ -1,3 +1,7 @@
-interface=wlan0
-  dhcp-range=192.168.0.11,192.168.0.30,255.255.255.0,24h
-  
+interface=wlan0 
+listen-address=192.168.5.1
+bind-interfaces 
+server=8.8.8.8
+domain-needed
+bogus-priv
+dhcp-range=192.168.5.100,192.168.5.200,24h
