--- a/setup/services/hotspot/etc/hostapd/hostapd.conf
+++ b/setup/services/hotspot/etc/hostapd/hostapd.conf
@@ -1,14 +1,23 @@
 interface=wlan0
-bridge=br0
+driver=nl80211
+#bridge=br0
 hw_mode=g
-channel=7
+
+channel=6
 wmm_enabled=0
+
+ieee80211n=1
+wmm_enabled=1
+ht_capab=[HT40][SHORT-GI-20][DSSS_CCK-40]
+
 macaddr_acl=0
 auth_algs=1
 ignore_broadcast_ssid=0
+
 wpa=2
 wpa_key_mgmt=WPA-PSK
 wpa_pairwise=TKIP
 rsn_pairwise=CCMP
+
 ssid=Club403
 wpa_passphrase=DangerDanger
