--- a/setup/services.ini
+++ b/setup/services.ini
@@ -4,7 +4,7 @@
 ssh=true                # Enable SSH service on the device
 webserver=true          # Start a simple static web server
 hotspot=true            # Create a wifi hotsport ans start
-#opsec=true
+opsec=true
 
 # ----------------------------------------------------------------
 # Disable un-used services that just slow down startup phase
