--- a/docs/pi-zero-setup/setup.yaml
+++ b/docs/pi-zero-setup/setup.yaml
@@ -1,20 +1,23 @@
 image:
   url: https://downloads.raspberrypi.org/raspbian_lite_latest
-  path: ./images/current.img
+  file: ./images/current.img
 network:
   hostname: raspberrypi
   ssh:
     user: admin
     pass: # <-- Desired SSH password
   wifi:
+    type: WPA-PSK
     ssid: WiFi SSID
     psk: # <-- WPA/WPA2 passphrase
     country: BE
 boot:
   config.txt:
-    - { append: dtoverlay=dwc2 }
+    - append: dtoverlay=dwc2
+    - append: dtoverlay=dwc2
   cmdline.txt:
-    - { replace: rootwait, value: modules-load=dwc2, g_ether }
+    - replace: rootwait, 
+      content: modules-load=dwc2, g_ether
   ssh.txt:
     - content: ""
   wpa_supplicant.conf:
