--- a/setup.yaml
+++ b/setup.yaml
@@ -6,7 +6,7 @@ image:
 # Configure networking and how to connect to the device
 network:
   hostname: raspberrypi
-  ssh: 
+  ssh:
     enabled: true
     user: admin
     pass: # <-- Desired SSH password
@@ -16,18 +16,23 @@ network:
     ssid: # <-- WiFi SSID
     psk: # <-- WPA/WPA2 passphrase
 
-# --------------------------------------------------
-# TODO: Support generic first boot overlays
-# --------------------------------------------------
-volumes:
-  /apps: {}
-  /data: {}
 boot:
   ssh.txt: ""
   config.txt:
     dtoverlay: dwc2
   cmdline.txt:
-    modules-load: [dwc2,g_ether]
+    modules-load!: [dwc2, g_ether]
+  wpa_supplicant.conf: |-
+    ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
+    update_config=1
+    country=$RPI_WIFI_COUNTRY
+
+    network={
+      ssid="$RPI_WIFI_SSID"
+      psk="$RPI_WIFI_PSK"
+      key_mgmt=$RPI_WIFI_TYPE
+    }
+
   overlays:
     - file: config.txt
       test: dtoverlay=dwc2
@@ -48,3 +53,15 @@ boot:
           psk="$RPI_WIFI_PSK"
           key_mgmt=$RPI_WIFI_TYPE
         }
+
+# --------------------------------------------------
+# TODO: Support generic first boot overlays
+# --------------------------------------------------
+volumes:
+  /apps: {}
+  /data: {}
+packages:
+  go: ^1.21.4
+  node: true
+  python3: true
+  rust: true
