--- a/setup.yaml
+++ b/setup.yaml
@@ -44,6 +44,19 @@ boot:
 # --------------------------------------------------
 # TODO: Support generic first boot overlays
 # --------------------------------------------------
+tools:
+  # Install core packages
+  git: true
+
+  # Development tools
+  #python3: 3.11.5
+  #node: 23.3.0
+  #go: true
+  #rust: true
+
+  # Additional packages
+  #nginx: true
+
 volumes:
   /apps: {}
   /data: {}
