--- a/default.env
+++ b/default.env
@@ -13,6 +13,9 @@ SETUP_NETWORK_WIFI_PSK=""
 
 # Additional options
 SETUP_LOCALE_COUNTRY=""
+SETUP_LOCALE_TIMEZONE=""
+SETUP_KEYBOARD_LAYOUT=""
+SETUP_KEYBOARD_MODEL=""
 
 # Setup additional tools
 SETUP_TOOLS=(
