--- a/default.env
+++ b/default.env
@@ -3,11 +3,12 @@ SETUP_ADMIN_USER="pi"
 SETUP_ADMIN_PASS="zero"
 
 # Set basic network information
-SETUP_NETWORK_ENABLED="true"
 SETUP_NETWORK_HOSTNAME="zero"
+SETUP_NETWORK_SSH_ENABLED="true"
+SETUP_NETWORK_USB_ENABLED="true"
 
 # Advanced network configuration
-SETUP_NETWORK_SSH_ENABLE="false"
+SETUP_NETWORK_WIFI_ENABLED="true"
 SETUP_NETWORK_WIFI_SSID=""
 SETUP_NETWORK_WIFI_PSK=""
 
